--- a/app/assets/stylesheets/pages/_edit_user.scss
+++ b/app/assets/stylesheets/pages/_edit_user.scss
@@ -4,3 +4,9 @@
   top: -20px;
   width: 40px;
 }
+
+.img-show{
+  outline: 1px dashed white;
+  outline-offset: -12px;
+  max-width: -webkit-fill-available;
+}
