create onboarding and design improvement

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,12 +1,13 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "audio-player";
 @import "button";
 @import "chatroom";
 @import "chatroom-card";
 @import "card";
 @import "card-product";
-@import "footer";
-@import "form_legend_clear";
 @import "messages";
 @import "navbar";
+@import "footer";
+@import "form_legend_clear";
