--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,7 +40,7 @@
 .show-background {
   background: #7618FD;
   background-attachment: fixed;
-  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+  background-image: linear-gradient(30deg, #f6d365 0%, #fda085 100%);
 }
 
 .edit-background {
@@ -58,9 +58,21 @@
 .onboarding-background {
   background: #7618FD;
   background-attachment: fixed;
-  background-image: radial-gradient(circle at -11.24% 85.36%, #e28e2b 0%, #dd6427 100%);
+  background-image: radial-gradient(circle at -11.24% 85.36%, #ffdebe 0%, #ffbbcb 100%);
 }
 
 a {
   text-decoration: none !important;
+}
+
+h1 {
+  font-family: $headers-font;
+  font-size: 3.5em;
+  font-weight: bold;
+}
+
+h2 {
+  font-family: $headers-font;
+  font-size: 1.5em;
+  font-weight: bold;
 }
