--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -87,7 +87,7 @@ body {
   background: #fbfcffcf;
   padding-bottom: 8px;
   border-radius: 8px;
-  overflow: hidden;
+  overflow: scroll;
   position: absolute;
   will-change: transform;
   transition: all 0.3s ease-in-out;
@@ -105,6 +105,7 @@ body {
   max-width: 400px;
   height: 64vh;
   background: #F2F5FE;
+  box-shadow: 0px 0px 10px 0px #00000060;
   padding-bottom: 8px;
   border-radius: 8px;
   overflow: hidden;
@@ -180,13 +181,6 @@ body {
 
 .tinder--buttons i {
   vertical-align: middle;
-}
-
-.btn-show-contact {
-  background-image: linear-gradient(to right, #6a82fb, #93efb3);
-  border: none;
-  padding: 8px;
-  border-radius: 8px;
 }
 
 .title--card{
