--- a/app/assets/stylesheets/pages/_onboarding.scss
+++ b/app/assets/stylesheets/pages/_onboarding.scss
@@ -1,26 +1,37 @@
 .onboarding-tags {
   display: inline-block;
-  margin: 2px;
+  margin: 4px;
 }
 
 .onboarding-tags-label {
-  border: 1px solid #bd6115;
+  border: 1px solid #ec95a7;
+  color: #4c0c1eb3;
   border-radius: 20px;
   padding: 0px 8px;
-  background: #ffffffaa;
+  background: #ffffff66;
   margin: 1px;
 }
 
 .onboarding-tags-input:checked + .onboarding-tags-label {
   font-weight: bold;
   background: #ffffff;
-  border: 2px solid #bd6115;
-  color: #bd6115;
+  color: #861d56;
   margin: 0px;
+  box-shadow: 0px 0px 3px #6c181852;
 }
 
 .onboarding-btn {
   border-radius: 20px;
-  padding: 2px 6px;
-  border: white;
+  padding: 2px 20px;
+  border: none;
+  font-size: 1em;
+  background: #ffffff;
+  background-color: #861d56;
+  margin: 0px;
+  color: white;
+  float: right;
+}
+
+.onboarding-title {
+  color: #861d56;
 }
