--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,16 +12,28 @@
           <%= cl_image_tag user.photos.first.key, height: 300, width: 400, crop: :fill %>
           <div class="card-body start">
             <h3 class="card-title"> <%= user.name %> </h3>
-            <% end %>
-            <br>
           </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item"><i><h4> <%= user.description %> </h4></i></li>
-          <li class="list-group-item">I'm into : <%= user.music_styles[0].name %></li>
-          <% if user.user_songs.exists? %>
-             My favorite song: <audio controls> <source src="<%= rails_blob_url(user.user_songs.first.url) %>" type="<%= user.user_songs.first.url.content_type %>"/></audio>
-          <% end %>
-        </ul>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item"><i id='description-index'> <%= user.description %> </i></li>
+            <% if user.user_songs.exists? %>
+              <li class="list-group-item">
+                <audio controls>
+                  <source src="<%= rails_blob_url(user.user_songs.first.url) %>" type="<%= user.user_songs.first.url.content_type %>"/>
+                </audio>
+              </li>
+            <% end %>
+            <li class="list-group-item">
+              <div class="title--card mt-2">🎵 I'm into</div>
+              <%= user.music_styles.map { |m| m.name }.join(', ').html_safe %>
+            </li>
+            <li class="list-group-item end-list-index pb-3"><div class="title--card mt-2">👨‍🎤 I'm playing</div>
+              <%= user.user_instruments.map { |i| "#{Instrument.find(i.instrument_id).name} (<i>#{i.level}</i>)" }.join(', ').html_safe %>
+            </li>
+            <li class="list-group-item show-more-list-index">
+              <p id='show-more-index'>▾ <em> show more </em> ▾</p>
+            </li>
+          </ul>
+        <% end %>
       </div>
     <% end %>
   </div>
