--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,10 +16,10 @@
             <br>
           </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item"><i><h4> <%= user.description %> </h4></i></li>
+          <li class="list-group-item"><i><h5> <%= user.description %> </h5></i></li>
           <li class="list-group-item">I'm into : <%= user.music_styles[0].name %></li>
           <% if user.user_songs.exists? %>
-             My favorite song: <audio controls> <source src="<%= rails_blob_url(user.user_songs.first.url) %>" type="<%= user.user_songs.first.url.content_type %>"/></audio>
+            <audio controls> <source src="<%= rails_blob_url(user.user_songs.first.url) %>" type="<%= user.user_songs.first.url.content_type %>"/></audio>
           <% end %>
         </ul>
       </div>
