--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
           <li class="list-group-item"><div class="title--card">⏳ I've been playing for</div>
           <%= @user.experience_in_years %> years</li>
           <% if @user.user_songs.exists? %>
-             My favorite song: <audio controls> <source src="<%= rails_blob_url(@user.user_songs.first.url) %>" type="<%= @user.user_songs.first.url.content_type %>"/></audio>
+              <audio controls> <source src="<%= rails_blob_url(@user.user_songs.first.url) %>" type="<%= @user.user_songs.first.url.content_type %>"/></audio>
           <% end %>
         </ul>
         <br>
