--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,6 +65,10 @@ a {
   text-decoration: none !important;
 }
 
+audio {
+  width: 100%;
+  height: 64px;
+
 h1 {
   font-family: $headers-font;
   font-size: 3.5em;
@@ -75,4 +79,4 @@ h2 {
   font-family: $headers-font;
   font-size: 1.5em;
   font-weight: bold;
-}
+  }
