--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,6 +13,13 @@
           <div class="card-body start">
             <h3 class="card-title"> <%= user.name %> </h3>
           </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><i><h5> <%= user.description %> </h5></i></li>
+          <li class="list-group-item">I'm into : <%= user.music_styles[0].name %></li>
+          <% if user.user_songs.exists? %>
+            <audio controls> <source src="<%= rails_blob_url(user.user_songs.first.url) %>" type="<%= user.user_songs.first.url.content_type %>"/></audio>
+          <% end %>
+        </ul>
           <ul class="list-group list-group-flush">
             <li class="list-group-item"><i id='description-index'> <%= user.description %> </i></li>
             <% if user.user_songs.exists? %>
