les disques les icones fonctionnent

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,3 +76,8 @@ h2 {
   font-size: 1.5em;
   font-weight: bold;
 }
+
+.icones-passent-en-plus-clair-quand-on-est-sur-la-page{
+  background-color: #F5F5F5;
+}
+
