--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -17,3 +17,17 @@
 .navbar-lewagon .navbar-brand img {
   width: 240px;
 }
+
+.icon-svg-compact-disc{
+  fill:  #F5F5F5;
+  width: 34px;
+  position: relative;
+  top: -3px;
+}
+
+.icon-svg-music{
+  fill:  #F5F5F5 !important;
+  width: 34px;
+  position: relative;
+  top: -3px;
+}
