populate seeds and few front changes

--- a/app/views/users/new_onboarding.html.erb
+++ b/app/views/users/new_onboarding.html.erb
@@ -1,6 +1,6 @@
 <div class="favorited-card-container mt-5">
   <h1>Hello you !</h1>
-  <em>To start, we have some quick questions to know a bit about you...</em>
+  <em>To begin with, we have some quick questions to know a bit more about you...</em>
   <br/>
   <h2 class='onboarding-title mt-5'>What kind of music do you play ?</h2>
   <em>We won’t judge you, even if you like reggaeton 😬</em>
