--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,7 +29,7 @@
         <li class="list-group-item"><div class="title--card">⏳ I've been playing for</div>
         <%= @user.experience_in_years %> years</li>
         <% if @user.user_songs.exists? %>
-        <li class="list-group-item end-song"><div class="title--card">🎧 Listen my creation</div>
+        <li class="list-group-item end-song"><div class="title--card">🎧 Listen to my creation</div>
           <div class='audio-show-player'><audio controls> <source src="<%= rails_blob_url(@user.user_songs.first.url) %>" type="<%= @user.user_songs.first.url.content_type %>"/></audio></li></div>
         <% end %>
       </ul>
