--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -2,7 +2,7 @@
   overflow: hidden;
   height: 120px;
   background: #e8ebf5e6;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.20);
+  box-shadow: 0px 0px 10px 0px #00000060;
   display: flex;
   align-items: center;
   border-radius: 8px;
@@ -11,8 +11,8 @@
 }
 
 .card-product img {
-  height: 100%;
-  width: 120px;
+  height: 120px;
+  width: 100%;
   object-fit: cover;
 }
 
@@ -20,6 +20,7 @@
   font-size: 1.5em;
   font-weight: 600;
   margin: 0;
+  color: black;
 }
 
 .card-product p {
@@ -28,8 +29,18 @@
   opacity: .7;
   margin-bottom: 0;
   margin-top: 8px;
+  color: black;
 }
 
 .card-product .card-product-infos {
   padding: 16px;
+}
+
+.like-btn-fav {
+  position: relative;
+  top: -60px;
+  left: -163px;
+  font-size: 2em;
+  -webkit-text-stroke: 2px white;
+  color: #e5346d;
 }
