--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <%= image_tag("welcome_to.png", class: "default-welcome-img") %>
   <%= image_tag("sigle_sans_fond.png", class: "default-sigle-img") %>
   <%= image_tag("logo_sans_fond.png", class: "default-logo-img") %>
-  <p class="default-txt">Find a musicien, Found your group</p>
+  <p class="default-txt">Find a musician, Found your band</p>
   <%= link_to new_user_session_path(), class: "connexion-btn-border" do %>
     <span>I'm already a Bro'</span>
   <% end %>
