--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,15 +1,18 @@
-<h1>Messages</h1>
-<br>
-<div class="chatrooms">
-  <% @user_chatrooms.each do |user_chatroom| %>
-    <%= link_to chatroom_path(user_chatroom.chatroom_id) do %>
-      <div class="chatroom-card">
-        <%= cl_image_tag user_chatroom.chatroom.chatroom_buddy(current_user).photos.first.key, class: "chatroom-card-avatar" %>
-        <div class="chatroom-card-content">
-          <p class="chatroom-card-content-name"><%= user_chatroom.chatroom.chatroom_buddy(current_user).name %></p>
-          <p class="chatroom-card-content-message"><%= user_chatroom.chatroom&.messages&.last&.content&.truncate(25) %></p>
+<div class="favorited-card-container">
+  <h1 class="my-4 my-chat-title-page"><%= @title %></h1>
+  <div class="chatrooms">
+    <% @user_chatrooms.each do |user_chatroom| %>
+      <%= link_to chatroom_path(user_chatroom.chatroom_id) do %>
+        <div class="chatroom-card">
+          <i class="chatroom-card-btn fa-solid fa-chevron-right"></i>
+          <%= cl_image_tag user_chatroom.chatroom.chatroom_buddy(current_user).photos.first.key, class: "chatroom-card-avatar" %>
+          <div class="chatroom-card-content">
+            <p class="chatroom-card-content-name mt-1"><%= user_chatroom.chatroom.chatroom_buddy(current_user).name %></p>
+            <i class="chatroom-card-content-time"><%= user_chatroom.chatroom&.messages&.last&.created_at&.strftime("%a %b %e at %l:%M %p") %></i>
+            <p class="chatroom-card-content-message"><%= user_chatroom.chatroom&.messages&.last&.content&.truncate(40) %></p>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
 </div>
