--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -117,3 +117,42 @@ padding: 1%;
   border: 1px solid black;
   color: black;
 }
+
+.log-in-btn{
+  border-radius: 20px;
+  padding: 2px 20px;
+  border: 1px solid white;
+  font-size: 1.5em;
+  background: #ffffff;
+  background-color: #562a93;
+  color: white;
+  display: block;
+  margin: 34px auto;
+}
+
+.onboarding-log-in-btn {
+  border-radius: 20px;
+  padding: 4px 12px;
+  border: 1px solid #552a93;
+  font-size: 1em;
+  background: #ffffff;
+  background-color: #9073e4;
+  margin: 10px auto;
+  color: white;
+  display: block;
+  width: fit-content;
+}
+
+.add-new-song-btn {
+  border-radius: 20px;
+    padding: 4px 20px;
+    font-size: 1.35em;
+    background: #351c73;
+    border: 1.5px solid #ffffff;
+    margin: 50px auto;
+    display: block;
+    color: white;
+    font-weight: 600;
+    box-shadow: 0px 0px 10px 0px #00000060;
+    text-align: center;
+}
