--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -12,35 +12,35 @@
 
 .card-product img {
   height: 120px;
-  width: 100%;
+  width: 90%;
   object-fit: cover;
 }
 
 .card-product h2 {
-  font-size: 1.5em;
+  font-size: 1.6em;
   font-weight: 600;
   margin: 0;
   color: black;
 }
 
 .card-product p {
-  font-size: 12px;
+  font-size: 1em;
   line-height: 1.4;
-  opacity: .7;
   margin-bottom: 0;
   margin-top: 8px;
   color: black;
 }
 
 .card-product .card-product-infos {
-  padding: 16px;
+  // padding: 16px;
+  margin-top: 40px;
 }
 
 .like-btn-fav {
   position: relative;
-  top: -60px;
-  left: -163px;
+  top: -100px;
+  left: -150px;
   font-size: 2em;
-  -webkit-text-stroke: 2px white;
-  color: #e5346d;
+  -webkit-text-stroke: 1.5px white;
+  color: #df4062;
 }
