--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -92,7 +92,9 @@ body {
   box-shadow: 0px 0px 10px 0px #00000060;
   padding-bottom: 8px;
   border-radius: 8px;
-  overflow: scroll;
+  height: 82%;
+  overflow-x: hidden;
+  overflow-y: scroll;
   position: absolute;
   will-change: transform;
   transition: all 0.3s ease-in-out;
