--- a/app/assets/stylesheets/pages/_edit_user.scss
+++ b/app/assets/stylesheets/pages/_edit_user.scss
@@ -10,3 +10,18 @@
   outline-offset: -12px;
   max-width: -webkit-fill-available;
 }
+
+.sign-out {
+  font-size: 1em;
+  color: #5c478c;
+  border: 1px solid #715f9b;
+  border-radius: 20px;
+  padding: 2px 10px;
+  font-weight: 100;
+  margin: 20px;
+  text-align: center;
+}
+
+.end-edit {
+  border: none;
+}
