--- a/app/assets/stylesheets/pages/_show_user.scss
+++ b/app/assets/stylesheets/pages/_show_user.scss
@@ -9,7 +9,7 @@ flex-direction: column;
   top: 20px;
   left: 20px;
   font-size: 2em;
-  color: #f38d95;
+  color: #df4062;
 }
 
 .like-btn-show {
@@ -48,7 +48,7 @@ flex-direction: column;
   border: 1px solid #009688;
   color: #009688;
   border-radius: 20px;
-  padding: 0px 8px;
+  padding: 1px 10px;
   background: #e5ecee66;
   font-size: 0.9em;
 }
