--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,29 +1,31 @@
-<div class="back-section">
-  <%= link_to chatrooms_path do %>
-    <i class="fa-solid fa-angles-left"></i> Back to messages
-  <% end %>
-</div>
-<div class="container chatroom" data-controller="chatroom-subscription"
-  data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>"
-  data-chatroom-subscription-current-user-id-value="<%= current_user.id %>">
-  <div class="messages" data-chatroom-subscription-target="messages">
-    <% @chatroom.messages.each do |message| %>
-      <div class="message-row d-flex <%= message.sender?(current_user) ? 'justify-content-end' : 'justify-content-start' %>">
-        <div class="<%= message.sender?(current_user) ? 'sender-style' : 'receiver-style' %>">
-          <%= render "messages/message", message: message %>
-        </div>
-      </div>
+<div class="favorited-card-container">
+  <div class="back-section">
+    <%= link_to chatrooms_path do %>
+      <i class="fa-solid fa-angles-left"></i> Back to messages
     <% end %>
-
   </div>
-  <%= simple_form_for [@chatroom, @message],
-    remote: true,
-    html: {data: {action: "ajax:success->chatroom-subscription#resetForm"}, class: "d-flex" } do |f|
-  %>
-    <%= f.input :content,
-      label: false,
-      placeholder: "Message"
+  <div class="container chatroom" data-controller="chatroom-subscription"
+    data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>"
+    data-chatroom-subscription-current-user-id-value="<%= current_user.id %>">
+    <div class="messages" data-chatroom-subscription-target="messages">
+      <% @chatroom.messages.each do |message| %>
+        <div class="message-row d-flex <%= message.sender?(current_user) ? 'justify-content-end' : 'justify-content-start' %>">
+          <div class="<%= message.sender?(current_user) ? 'sender-style' : 'receiver-style' %>">
+            <%= render "messages/message", message: message %>
+          </div>
+        </div>
+      <% end %>
+
+    </div>
+    <%= simple_form_for [@chatroom, @message],
+      remote: true,
+      html: {data: {action: "ajax:success->chatroom-subscription#resetForm"}, class: "d-flex" } do |f|
     %>
-    <%= f.submit "Send", class: "btn btn-chatroom" %>
-  <% end %>
+      <%= f.input :content,
+        label: false,
+        placeholder: "Message"
+      %>
+      <%= f.submit "Send", class: "btn btn-chatroom" %>
+    <% end %>
+  </div>
 </div>
