--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,4 +1,4 @@
-<div class="favorited-card-container">
+<div class="page-container">
   <h1 class="my-4 my-chat-title-page"><%= @title %></h1>
   <div class="chatrooms">
     <% @user_chatrooms.each do |user_chatroom| %>
