--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,4 +1,4 @@
-<div class="favorited-card-container">
+<div class="page-container">
   <div class="back-section">
     <%= link_to chatrooms_path do %>
       <i class="fa-solid fa-angles-left"></i> Back to messages
