--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="homepage-body favorited-card-container">
+<div class="homepage-body page-container">
   <%= image_tag("welcome_to.png", class: "default-welcome-img") %>
   <%= image_tag("sigle_sans_fond.png", class: "default-sigle-img") %>
   <%= image_tag("logo_sans_fond.png", class: "default-logo-img") %>
