--- a/app/views/user_songs/index.html.erb
+++ b/app/views/user_songs/index.html.erb
@@ -1,4 +1,4 @@
-<div class="favorited-card-container">
+<div class="page-container">
   <h1 class="mt-4 my-song-title-page"><%= @title %></h1>
   <% @user_songs.each do |song| %>
     <div class="user-song-card p-3 my-4">
