--- a/app/views/user_songs/new.html.erb
+++ b/app/views/user_songs/new.html.erb
@@ -1,4 +1,4 @@
-<div class="favorited-card-container">
+<div class="page-container">
   <h1 class="my-4 new-song-title-page">Upload a new song</h1>
   <%= form_for [@user, @user_song] do |f| %>
   <%= f.label :title, class: 'new-song-label' %>
