--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -105,6 +105,11 @@ body {
   color: #c1abe3;
 }
 
+.page-container {
+  max-width: 400px;
+  margin: auto;
+}
+
 .add-song-btn {
   border-radius: 20px;
   padding: 4px 20px;
