--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -12,7 +12,7 @@
 
 .card-product img {
   height: 120px;
-  width: 90%;
+  width: 130px;
   object-fit: cover;
 }
 
@@ -24,7 +24,7 @@
 }
 
 .card-product p {
-  font-size: 1em;
+  font-size: 0.8em;
   line-height: 1.4;
   margin-bottom: 0;
   margin-top: 8px;
@@ -32,14 +32,13 @@
 }
 
 .card-product .card-product-infos {
-  // padding: 16px;
-  margin-top: 40px;
+  margin: 40px 10px 0 10px;
 }
 
 .like-btn-fav {
   position: relative;
   top: -100px;
-  left: -150px;
+  left: -130px;
   font-size: 2em;
   -webkit-text-stroke: 1.5px white;
   color: #df4062;
