--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -12,16 +12,17 @@
   p {
     background-color: rgba(106, 130, 251, 0.5);
     border-radius: 8px;
-    width: 200px;
+    width: fit-content;
     padding: 6px 10px;
+    float: right;
   }
 }
 
 .receiver-style p {
   background-color: rgba(184, 155, 255, 0.5);
-  border-radius: 15px;
-  width: 200px;
-  padding-left: 10px;
+  border-radius: 8px;
+  width: fit-content;
+  padding: 6px 10px;
 }
 
 .light-time {
